<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/map_button"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/location_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search"
            app:layout_constraintEnd_toStartOf="@+id/map_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="HISTORY"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/menu_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.00"
            android:background="@drawable/menu"
            android:onClick="showMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp" />

</LinearLayout>
