...
            app:layout_constraintStart_toEndOf="@+id/menu_button" />

    </android.support.constraint.ConstraintLayout>


    <EditText
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:background="@color/editTextBackground"
        android:hint="Enter keyword"
        android:inputType="text"
...
        android:layout_height="wrap_content"
        android:text="Clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/habit_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

...
