...
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/history_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/history"
            android:paddingTop="30dp"
            android:layout_weight="1"
            android:text="HISTORY"
...
