...
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient"
            android:text="SIGN UP"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="18sp"
            android:textStyle="bold" />


...
